feat: add v2 inventory read apis
